@@ -109,6 +109,7 @@ class _Interface {
 			IMAGE_SELECTED,
 			IMAGE_BUTTON_UP,
 			IMAGE_BUTTON_DOWN,
+			IMAGE_BUTTON_SORT,
 			IMAGE_BUTTON_DELETE,
 			IMAGE_COUNT,
 		};
