@@ -2,6 +2,7 @@ irrlamb 0.3.0 -
 - UI now scales with resolution
 - Reworked UI theme
 - Physics now runs at 1000hz
+- Added replay sorting
 - Added gameplay options
 - Updated some tutorial levels
 - Windows build now uses MinGW-w64
